...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="iSE-bY-0ZD" id="odW-hx-RKf"/>
                            <outlet property="delegate" destination="iSE-bY-0ZD" id="qSu-vr-fJ1"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Movie list" id="ri1-9M-nXo"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="1CF-Fp-RHt" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2205" y="183"/>
        </scene>
        <!--Movie Detail Controller-->
...
                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hht-Q5-OMU">
                                        <rect key="frame" x="164" y="52" width="46" height="30"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="46" id="qoe-0M-V4r"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <state key="normal" title="Book"/>
                                        <connections>
                                            <segue destination="T8O-Lc-mI2" kind="show" id="NhL-HI-bDj"/>
                                        </connections>
                                    </button>
                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="tt0087182" highlightedImage="tt0087182" translatesAutoresizingMaskIntoConstraints="NO" id="rcx-SZ-pHo">
                                        <rect key="frame" x="102" y="90" width="170" height="259"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C9c-00-ePv">
                                <rect key="frame" x="20" y="306" width="102" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Confirm"/>
                                <connections>
                                    <segue destination="Tul-yj-Drl" kind="show" id="glV-rc-MR8"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Price: $10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y7P-VP-9ca">
                                <rect key="frame" x="20" y="152" width="89" height="23"/>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="2Cf-8a-Gi7" id="Wo9-06-1dn"/>
                            <outlet property="delegate" destination="2Cf-8a-Gi7" id="fo5-Ig-ZBS"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Movie Detail" id="zKn-Ss-fVH"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="IDE-Va-F3o" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1348" y="1815"/>
        </scene>
        <!--Navigation Controller-->
...
